--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.11.0",
-    "morgan": "^1.10.0"
+    "mongoose": "^8.3.3",
+    "morgan": "^1.10.0",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
